Init repo
Created the folder structure that the project will use.
Created some simple test scripts to verify that the project is ready to use.
Created documentation in the README.md file to explain how I set up the project.

Signed-off-by: h1ddengames <skarim3000@gmail.com>